--- a/src/HwcConsole/project.json
+++ b/src/HwcConsole/project.json
@@ -5,15 +5,10 @@
   },
 
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    }
+    "Microsoft.Extensions.CommandLineUtils": "1.0.0"
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
-      "imports": "dnxcore50"
-    }
+    "net451": {}
   }
 }
