Upgrade to VS2017

--- a/applicationHost.config
+++ b/applicationHost.config
@@ -57,7 +57,7 @@
           <binding protocol="http" bindingInformation=":5000:127.0.0.1" />
         </bindings>
         <application path="/" applicationPool="DefaultAppPool">
-          <virtualDirectory path="/" physicalPath="C:\src\HelloWorldMvc\bin\Release\netcoreapp1.0\publish" />
+          <virtualDirectory path="/" physicalPath="%systemdrive%\inetpub\wwwroot" />
         </application>
       </site>
     </sites>
