--- a/src/HwcConsole/HwcConsole.csproj
+++ b/src/HwcConsole/HwcConsole.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>HwcConsole</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>HwcConsole</PackageId>
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Web.Administration" Version="10.0.0-rc1" />
+    <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
